# dtu_mlops_project

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py
.dvc/: config
.github/workflows/: check_code.yaml  cml_data.yaml  data_version_control.yml  deploy_api.yaml  deploy_data.yaml  deploy_frontend.yaml  deploy_train.yaml  docker_ci.yaml  format_code.yaml  google_artifact_registry.yaml  load_test.yaml  restart_api.yaml  start_vertex_ai.yaml  test_code.yaml  testing.yaml  tests.yaml  train.dockerfile.env.key.yml
configs/: config_cpu.yaml  mobilenetv4_conv_small_fine_tuning.yaml  mobilenetv4_hybrid_medium_fine_tuning.yaml  mobilenetv4_hybrid_medium_fine_tuningv2.yaml  mobilenetv4_hybrid_medium_fine_tuningv2.yml  vehicle_classes.json  vertex_ai_config_cpu.yaml  vertex_ai_config_gpu.yaml
data/processed/: .gitignore  timm-imagenet-1k-wds-subset.dvc
dockerfiles/: api.dockerfile  data.dockerfile  frontend.dockerfile  test.dockerfile  train.dockerfile
docs/: mkdocs.yaml
output/train/example/: args.yaml  summary.csv
reports/: README.md
reports/figures/: mlops_pipeline.drawio
src/dtu_mlops_project/: api.py  data.py  data_subset.py  evaluate.py  frontend.py  mobilenetv4_conv_small_test.yaml  model.py  train.py  upload_loadtest_results.py  utils.py  visualize.py
src/dtu_mlops_project/timm/: train.py  validate.py
tests/: test_data.py  test_train.py
tests/integrationtests/: test_apis.py
tests/performancetests/: locustfile.py
