[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dtu_mlops_project"
version = "0.0.1"
description = "02476 Machine Learning Operations Project"
authors = [
  { name = "s233489", email = "s233489@student.dtu.dk" },
  { name = "jonnil", email = "jonnil@dtu.dk" },
  { name = "s091969", email = "s091969@student.dtu.dk" },
  { name = "s233480", email = "s233480@student.dtu.dk" }
]

readme = "README.md"
requires-python = ">=3.12"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
select = ["I"]

[tool.coverage.run]
omit = ["tests/*"]
